hphp/hack/test/typecheck/await_in_expressions2.php.exp
File "await_in_expressions2.php", line 5, characters 9-10:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
